--- a/rebar.config
+++ b/rebar.config
@@ -6,5 +6,5 @@
             {"CFLAGS", "$CFLAGS -fPIC"},
             {"CXXFLAGS", "$CXXFLAGS -fPIC"},
             {"DRV_CFLAGS", "$DRV_CFLAGS -Werror"},
-            {"DRV_LDFLAGS", "$DRV_LDFLAGS -ldtrace"}
+            {"DRV_LDFLAGS", "$DRV_LDFLAGS -lkstat"}
             ]}.
