Rewrite NIF using C version of kstat command line utility.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,28 @@
-core
-*.o
+*.version
+src/ekstat_version.hrl
+rel/pkg/*.gz
+rel/pkg/*.tar
+gproc_*
+.eunit
 ebin
-priv
+db
+deps
+logs
+*~
+#*
+.DS_Store
+Mnesia.*
+erl_crash.dump
+*.beam
+*.o
+standalone.config
+rel/ekstat
+rel/ekstat.tar.bz2
+/rebar
+/core
+/doc/
+/dev
+/log
+/priv
+/rel/vars/dev*_vars.config
+/.ekstat.plt
