--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,10 @@
-{lib_dirs, ["deps"]}.
-{erl_opts, [{i,"deps"}, debug_info]}.
-{deps, []}.
+{erl_opts, [
+    warnings_as_errors,
+    debug_info
+]}.
 {port_env, [
-            %% Make sure to set -fPIC when compiling leveldb
-            {"CFLAGS", "$CFLAGS -fPIC"},
-            {"CXXFLAGS", "$CXXFLAGS -fPIC"},
-            {"DRV_CFLAGS", "$DRV_CFLAGS -Werror"},
-            {"DRV_LDFLAGS", "$DRV_LDFLAGS -lkstat"}
-            ]}.
+    {"CFLAGS", "$CFLAGS -fPIC"},
+    {"CXXFLAGS", "$CXXFLAGS -fPIC"},
+    {"DRV_CFLAGS", "$DRV_CFLAGS -Werror"},
+    {"DRV_LDFLAGS", "$DRV_LDFLAGS -lcmdutils -lkstat"}
+]}.
