Experimenting with a asynchronous NIF version of ekstat.

--- a/rebar.config
+++ b/rebar.config
@@ -2,6 +2,9 @@
     warnings_as_errors,
     debug_info
 ]}.
+{port_specs, [
+    {"priv/ekstat_nif.so", ["c_src/stat_kstat.c", "c_src/ekstat.c"]}
+]}.
 {port_env, [
     {"CFLAGS", "$CFLAGS -fPIC"},
     {"CXXFLAGS", "$CXXFLAGS -fPIC"},
