Finish up the asynchronous NIF version of ekstat.

--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
     debug_info
 ]}.
 {port_specs, [
-    {"priv/ekstat_nif.so", ["c_src/stat_kstat.c", "c_src/ekstat.c"]}
+    {"priv/ekstat_nif.so", ["c_src/kstat_reader.c", "c_src/ekstat.c", "c_src/ekstat_nif.c"]}
 ]}.
 {port_env, [
     {"CFLAGS", "$CFLAGS -fPIC"},
