--- a/rebar.config
+++ b/rebar.config
@@ -8,3 +8,11 @@
     {"DRV_CFLAGS", "$DRV_CFLAGS -Werror"},
     {"DRV_LDFLAGS", "$DRV_LDFLAGS -lcmdutils -lkstat"}
 ]}.
+
+{plugins,
+  [{pc, {git, "git@github.com:blt/port_compiler.git", {branch, "master"}}}]}.
+
+{provider_hooks,
+  [{post,
+    [{compile, {pc, compile}},
+     {clean, {pc, clean}}]}]}]}.
