added prot name

--- a/rebar.config
+++ b/rebar.config
@@ -2,6 +2,8 @@
     warnings_as_errors,
     debug_info
 ]}.
+{so_name, "ekstat_drv.so"}.
+
 {port_env, [
     {"CFLAGS", "$CFLAGS -fPIC"},
     {"CXXFLAGS", "$CXXFLAGS -fPIC"},
